--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,5 @@
-@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+body {
+  font-family: "Roboto", sans-serif;
+  color: #ccc;
+  background-color: #474747;
+}
