--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,6 +4,13 @@
   padding: 10px 0;
 }
 
+.mainFooter__btns {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 10px;
+}
+
 .mainFooter p {
   padding: 0;
   margin: 0;
